Fixed bug where table overflowed off the screen.

--- a/style.css
+++ b/style.css
@@ -123,4 +123,6 @@ td, th{
     padding: 2.5vh;
     height: fit-content;
     width: fit-content;
+    max-height: 40vh;
+    overflow: scroll;
 }
